--- a/src/pug/papers.j2
+++ b/src/pug/papers.j2
@@ -1,112 +1,40 @@
-{% set vars = {'foo': False} %}
-{% for paper in input %}
-{% if paper.type == '' and (paper.issued['date-parts'][0][0] | int) > 2020%}
-{% if not vars.foo %}
+{% from "src/pug/_paper.j2" import paper %}
+
+{% set maximum = 4 %}
+
+{% set count = {'counter': 0} %}
+{% for entry in input %}
+{% if entry.type == '' and (entry.issued['date-parts'][0][0] | int) > 2020%}
+{% if count.counter < maximum %}
+{% if count.counter == 0 %}
 h3.col-lg-12.my-5.text-left 
     .bi.bi-journal &nbsp; Preprints
 .row.row-cols-1.row-cols-xl-2.gx-5.gy-4
 {% endif -%}
-{% if vars.update({'foo': True}) %} {% endif %}
-    .col
-        .card.shadow.rounded.h-100
-            .card-body
-                | {% for name in paper.author %}{% if loop.index > 1 %}{% if loop.last %} and {% else %}, {% endif %}{% endif %}{{ name.given }} {{ name.family }}{% if loop.last %}.{% endif %}{% endfor %}<br>
-                | #[strong {{ paper.title }}].<br>
-                | {% if paper.issued %} {% if paper.toappear %}to appear in{% endif %} {% if paper.type == 'article-journal' %}#[i {{ paper['container-title'] }}]{% endif %}{% if paper.toappear %},{% endif %} {% if paper.page %} {% if paper.type == 'chapter' %}#[i {{ paper['container-title'] }}], {% endif %}{% if paper.series %}{{ paper.series }},{% endif %} {{ paper.volume }}{% endif %} {% if paper.conference %}#[i {{ paper.conference }}], {% if paper.note %}{{ paper.note }},{% endif %} {% endif %} {% if paper.seminar %}#[i {{ paper.seminar }}], {% endif %} {% if paper.month %}{{ paper.month }}{% endif %} {% if paper.page %}{% if paper.type == 'article-journal' %}({% endif %}{% endif %}{{ paper.issued['date-parts'][0][0] }}{% if paper.page %}{% if paper.type == 'article-journal' %}){% endif %}{% if paper.number %} no. {{ paper.number }}{% endif %}, {% if paper.page %}{{ paper.page }}{% endif %}{% endif %}{% endif %}{% if paper.conference %}, {{ paper.address }}{% endif %}{% if paper.seminar %}, {{ paper.address }}{% endif %}. 
-            .card-footer
-                {% if paper.DOI -%}
-                a.paper-link(href="https://doi.org/{{ paper.DOI }}") publisher
-                {% endif -%}
-                {% if paper.arxiv -%}
-                a.paper-link(href="https://arxiv.org/abs/{{ paper.arxiv }}") arxiv
-                {% endif -%}
-                {% if paper.abstract -%}
-                a.paper-link(type="button", data-bs-toggle="modal", data-bs-target="#abstract{{ paper.id }}") Abstract
-
-                // Modal
-                .modal.fade(id="abstract{{ paper.id }}", tabindex="-1", role="dialog", aria-labelledby="{{ paper.title }}", aria-hidden="true")
-                    .modal-dialog(role="document").modal-dialog-centered
-                        .modal-content
-                            .modal-header
-                                h5.modal-title(id="abstract{{ paper.id }}") {{ paper.title }}
-                            .modal-body
-                                p {{ paper.abstract }}
-                            .modal-footer
-                                button.btn.btn-primary(type="button", data-bs-dismiss="modal") Close
-                {% endif -%}
-                {% if paper.bibtex -%}
-                a.paper-link(type="button", data-bs-toggle="modal", data-bs-target="#bibtex{{ paper.id }}") BibTeX
-
-                // Modal
-                .modal.fade(id="bibtex{{ paper.id }}", tabindex="-1", role="dialog", aria-labelledby="{{ paper.title }}", aria-hidden="true")
-                    .modal-dialog(role="document").modal-dialog-centered
-                        .modal-content
-                            .modal-body
-                                p(id="bibtex{{ paper.id }}") 
-                                    code {{ paper.bibtex.replace('\n', '<br>&nbsp;&nbsp;&nbsp;&nbsp;') }}
-                            .modal-footer
-                                button.btn.btn-primary(type="button", data-bs-dismiss="modal") Close
-                {% endif -%}
-                {% if paper['zbmath_url'] -%}
-                a.paper-link(href="{{ paper['zbmath_url'] }}") zbMath
-                {% endif -%}
+    {% filter indent(width=4) %}
+    {{ paper(entry.id, entry.author, entry.title, entry.issued['date-parts'][0][0], entry.type, entry['container-title'], entry.volume, entry.number, entry.series, entry.page, entry.note, entry.DOI, entry.arxiv, entry.abstract, entry.bibtex, entry['zbmath_url']) }}
+    {% endfilter %}
+{% elif count.counter == maximum %}
+        a.btn.btn-primary.btn-xl(href='#about') See all
+{% endif -%}
+{% if count.update({'counter': count.counter + 1}) %} {% endif %}
 {% endif -%}
 {% endfor %}
+
 
 h3.col-lg-12.my-5.text-left 
     .bi.bi-journal-check &nbsp; Papers
 .row.row-cols-1.row-cols-xl-2.gx-5.gy-4
-    {% for paper in input %}
-    {% if paper.type != '' %}
-    .col
-        .card.shadow.rounded.h-100
-            .card-body
-                | {% for name in paper.author %}{% if loop.index > 1 %}{% if loop.last %} and {% else %}, {% endif %}{% endif %}{{ name.given }} {{ name.family }}{% if loop.last %}.{% endif %}{% endfor %}<br>
-                | #[strong {{ paper.title }}].<br>
-                | {% if paper.issued %} {% if paper.toappear %}to appear in{% endif %} {% if paper.type == 'article-journal' %}#[i {{ paper['container-title'] }}]{% endif %}{% if paper.toappear %},{% endif %} {% if paper.page %} {% if paper.type == 'chapter' %}#[i {{ paper['container-title'] }}], {% endif %}{% if paper.series %}{{ paper.series }},{% endif %} {{ paper.volume }}{% endif %} {% if paper.conference %}#[i {{ paper.conference }}], {% if paper.note %}{{ paper.note }},{% endif %} {% endif %} {% if paper.seminar %}#[i {{ paper.seminar }}], {% endif %} {% if paper.month %}{{ paper.month }}{% endif %} {% if paper.page %}{% if paper.type == 'article-journal' %}({% endif %}{% endif %}{{ paper.issued['date-parts'][0][0] }}{% if paper.page %}{% if paper.type == 'article-journal' %}){% endif %}{% if paper.number %} no. {{ paper.number }}{% endif %}, {% if paper.page %}{{ paper.page }}{% endif %}{% endif %}{% endif %}{% if paper.conference %}, {{ paper.address }}{% endif %}{% if paper.seminar %}, {{ paper.address }}{% endif %}. 
-            .card-footer
-                {% if paper.id in extras.keys() %}
-                {% if extras[paper.id] == ''%}
-                a.paper-link(href="assets/files/papers/{{ paper.id }}.pdf") PDF
-                {% else %}
-                a.paper-link(href="{{ extras[paper.id] }}") PDF
-                {% endif %}
-                {% endif %}
-                {% if paper.DOI -%}
-                a.paper-link(href="https://doi.org/{{ paper.DOI }}") publisher
-                {% endif -%}
-                {% if paper.arxiv -%}
-                a.paper-link(href="https://arxiv.org/abs/{{ paper.arxiv }}") arxiv
-                {% endif -%}
-                {% if paper.abstract -%}
-                a.paper-link(type="button", data-bs-toggle="modal", data-bs-target="#abstract{{ paper.id }}") Abstract
-
-                // Modal
-                .modal.fade(id="abstract{{ paper.id }}", tabindex="-1", role="dialog", aria-labelledby="{{ paper.title }}", aria-hidden="true")
-                    .modal-dialog(role="document").modal-dialog-centered
-                        .modal-content
-                            .modal-header
-                                h5.modal-title(id="abstract{{ paper.id }}") {{ paper.title }}
-                            .modal-body
-                                p {{ paper.abstract }}
-                            .modal-footer
-                                button.btn.btn-primary(type="button", data-bs-dismiss="modal") Close
-                {% endif -%}
-                {% if paper.bibtex -%}
-                a.paper-link(type="button", data-bs-toggle="modal", data-bs-target="#bibtex{{ paper.id }}") BibTeX
-
-                // Modal
-                .modal.fade(id="bibtex{{ paper.id }}", tabindex="-1", role="dialog", aria-labelledby="{{ paper.title }}", aria-hidden="true")
-                    .modal-dialog(role="document").modal-dialog-centered
-                        .modal-content
-                            .modal-body
-                                p(id="bibtex{{ paper.id }}") 
-                                    code {{ paper.bibtex.replace('\n', '<br>&nbsp;&nbsp;&nbsp;&nbsp;') }}
-                            .modal-footer
-                                button.btn.btn-primary(type="button", data-bs-dismiss="modal") Close
-                {% endif -%}
-                {% if paper['zbmath_url'] -%}
-                a.paper-link(href="{{ paper['zbmath_url'] }}") zbMath
-                {% endif -%}
+    {% set count = {'counter': 0} %}
+    {% for entry in input %}
+    {% if entry.type != '' %}
+    {% if count.counter < maximum %}
+    {% filter indent(width=4) %}
+    {{ paper(entry.id, entry.author, entry.title, entry.issued['date-parts'][0][0], entry.type, entry['container-title'], entry.volume, entry.number, entry.series, entry.page, entry.note, entry.DOI, entry.arxiv, entry.abstract, entry.bibtex, entry['zbmath_url']) }}
+    {% endfilter %}
+    {% elif count.counter == maximum %}
+        a.btn.btn-primary.btn-xl(href='#about') See all
+    {% endif -%}
+    {% if count.update({'counter': count.counter + 1}) %} {% endif %}
     {% endif -%}
     {% endfor %}
