--- a/src/pug/index.j2
+++ b/src/pug/index.j2
@@ -64,7 +64,8 @@ html(lang='en')
                         {% for network in social %}
                             a.ai.{{ network.icon }}.ai-2x.mx-2.professional-icons(href="{{ network.link }}", data-bs-toggle="tooltip",
                             data-bs-placement="top",
-                            data-bs-title="{{ network.name }}")
+                            data-bs-title="{{ network.name }}",
+                            aria-label="{{ network.name }}")
                         {% endfor %}
                         a.btn.btn-primary.btn-xl(href='#about') Find Out More
 
