--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -64,39 +64,48 @@ html(lang='en')
                         
                             a.ai.icon-zbmath.ai-2x.mx-2.professional-icons(href="https://zbmath.org/authors/?q=ai:muro.fernando", data-bs-toggle="tooltip",
                             data-bs-placement="top",
-                            data-bs-title="zbMath")
+                            data-bs-title="zbMath",
+                            aria-label="zbMath")
                         
                             a.ai.icon-ams.ai-2x.mx-2.professional-icons(href="https://mathscinet.ams.org/mathscinet/author?authorId=724223", data-bs-toggle="tooltip",
                             data-bs-placement="top",
-                            data-bs-title="MathSciNet")
+                            data-bs-title="MathSciNet",
+                            aria-label="MathSciNet")
                         
                             a.ai.ai-arxiv.ai-2x.mx-2.professional-icons(href="https://arxiv.org/a/muro_f_1", data-bs-toggle="tooltip",
                             data-bs-placement="top",
-                            data-bs-title="arXiv")
+                            data-bs-title="arXiv",
+                            aria-label="arXiv")
                         
                             a.ai.ai-google-scholar.ai-2x.mx-2.professional-icons(href="https://scholar.google.com/citations?user=Jh0JG3wAAAAJ", data-bs-toggle="tooltip",
                             data-bs-placement="top",
-                            data-bs-title="Google Scholar")
+                            data-bs-title="Google Scholar",
+                            aria-label="Google Scholar")
                         
                             a.ai.ai-mathoverflow.ai-2x.mx-2.professional-icons(href="https://mathoverflow.net/users/12166/fernando-muro", data-bs-toggle="tooltip",
                             data-bs-placement="top",
-                            data-bs-title="MathOverflow")
+                            data-bs-title="MathOverflow",
+                            aria-label="MathOverflow")
                         
                             a.ai.ai-orcid.ai-2x.mx-2.professional-icons(href="https://orcid.org/0000-0001-8457-9889", data-bs-toggle="tooltip",
                             data-bs-placement="top",
-                            data-bs-title="ORCID")
+                            data-bs-title="ORCID",
+                            aria-label="ORCID")
                         
                             a.ai.ai-clarivate.ai-2x.mx-2.professional-icons(href="http://www.webofscience.com/wos/author/record/I-5790-2015", data-bs-toggle="tooltip",
                             data-bs-placement="top",
-                            data-bs-title="Web of Science")
+                            data-bs-title="Web of Science",
+                            aria-label="Web of Science")
                         
                             a.ai.ai-scopus.ai-2x.mx-2.professional-icons(href="https://www.scopus.com/authid/detail.uri?authorId=22135559400", data-bs-toggle="tooltip",
                             data-bs-placement="top",
-                            data-bs-title="Scopus")
+                            data-bs-title="Scopus",
+                            aria-label="Scopus")
                         
                             a.ai.ai-zotero.ai-2x.mx-2.professional-icons(href="https://www.zotero.org/fmuro", data-bs-toggle="tooltip",
                             data-bs-placement="top",
-                            data-bs-title="Zotero")
+                            data-bs-title="Zotero",
+                            aria-label="Zotero")
                         
                         a.btn.btn-primary.btn-xl(href='#about') Find Out More
 
